# analisentimentos

./: .gitignore  ARTIGO_LINKEDIN_COMPLETO.md  README.md  claude_desktop_config.json  cliente.py  explicacao_exemplo_15.md  pyproject.toml  servidor_sentimentos.py
